--- a/examples/osd/guh_ws2812/Makefile
+++ b/examples/osd/guh_ws2812/Makefile
@@ -1,9 +1,9 @@
 ifeq ($(TARGET), osd-merkur)
-PLATFORM_FILES= avr-size-server guh_plantcare.osd-merkur.hex \
-    guh_plantcare.osd-merkur.eep                             
+PLATFORM_FILES= avr-size-server guh_ws2812.osd-merkur.hex \
+    guh_ws2812.osd-merkur.eep 
 endif
 
-all: guh_plantcare  $(PLATFORM_FILES)
+all: guh_ws2812 $(PLATFORM_FILES)
 
 # use target "er-plugtest-server" explicitly when requried 
 
@@ -11,8 +11,7 @@ CONTIKI=../../..
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
-
-CONTIKI_TARGET_SOURCEFILES += water-sensor.c
+CONTIKI_TARGET_SOURCEFILES += light_ws2812.c
 
 # automatically build RESTful resources including common resources
 ifndef TARGET
@@ -40,7 +39,6 @@ SMALL=1
 # REST Engine shall use Erbium CoAP implementation
 APPS += er-coap
 APPS += rest-engine
-APPS += arduino
 
 # optional rules to get assembly
 #CUSTOM_RULE_C_TO_OBJECTDIR_O = 1
@@ -67,43 +65,28 @@ endif
 #asmdir/%.S: %.c
 #	$(CC) $(CFLAGS) -MMD -S $< -o $@
 
-# border router rules
-$(CONTIKI)/tools/tunslip6:	$(CONTIKI)/tools/tunslip6.c
-	(cd $(CONTIKI)/tools && $(MAKE) tunslip6)
 
-connect-router:	$(CONTIKI)/tools/tunslip6
-	sudo $(CONTIKI)/tools/tunslip6 aaaa::1/64
+avr-size-server: guh_ws2812.osd-merkur
+	avr-size -C --mcu=MCU=atmega128rfa1 guh_ws2812.osd-merkur
 
-connect-router-cooja:	$(CONTIKI)/tools/tunslip6
-	sudo $(CONTIKI)/tools/tunslip6 -a 127.0.0.1 -p 60001 aaaa::1/64
+guh_ws2812.osd-merkur.hex: guh_ws2812.osd-merkur
+	avr-objcopy -j .text -j .data -O ihex guh_ws2812.osd-merkur \
+	    guh_ws2812.osd-merkur.hex
 
-connect-router-native:	$(CONTIKI)/examples/ipv6/native-border-router/border-router.native
-	sudo $(CONTIKI)/exmples/ipv6/native-border-router/border-router.native -a 127.0.0.1 -p 60001 aaaa::1/64
-
-connect-minimal:
-	sudo ip address add fdfd::1/64 dev tap0 
-
-avr-size-server: guh_plantcare.osd-merkur
-	avr-size -C --mcu=MCU=atmega128rfa1 guh_plantcare.osd-merkur
-
-guh_plantcare.osd-merkur.hex: guh_plantcare.osd-merkur
-	avr-objcopy -j .text -j .data -O ihex guh_plantcare.osd-merkur \
-	    guh_plantcare.osd-merkur.hex
-
-guh_plantcare.osd-merkur.eep: guh_plantcare.osd-merkur
+guh_ws2812.osd-merkur.eep: guh_ws2812.osd-merkur
 	avr-objcopy -j .eeprom --set-section-flags=.eeprom="alloc,load" \
 	    --change-section-lma .eeprom=0 -O ihex                      \
-	    guh_plantcare.osd-merkur guh_plantcare.osd-merkur.eep
+	    guh_ws2812.osd-merkur guh_ws2812.osd-merkur.eep
 
-flash-server: guh_plantcare.osd-merkur.hex guh_plantcare.osd-merkur.eep
+flash-server: guh_ws2812.osd-merkur.hex guh_ws2812.osd-merkur.eep
 	avrdude -pm128rfa1 -carduino -P/dev/ttyUSB0 -b57600 -e -U \
-	    flash:w:guh_plantcare.osd-merkur.hex:a -U \
-	    eeprom:w:guh_plantcare.osd-merkur.eep:a
+	    flash:w:guh_ws2812.osd-merkur.hex:a -U \
+	    eeprom:w:guh_ws2812.osd-merkur.eep:a
+
+flash-server-mac: guh_ws2812.osd-merkur.hex guh_ws2812.osd-merkur.eep
+	avrdude -pm128rfa1 -carduino -P/dev/cu.usbserial -b57600 -e -U \
+	    flash:w:guh_ws2812.osd-merkur.hex:a -U \
+	    eeprom:w:guh_ws2812.osd-merkur.eep:a
 
 
-flash-server-osx: guh_plantcare.osd-merkur.hex guh_plantcare.osd-merkur.eep
-	avrdude -pm128rfa1 -carduino -P/dev/cu.usbserial-A602JBIC -b57600 -e -U \
-	    flash:w:guh_plantcare.osd-merkur.hex:a -U \
-	    eeprom:w:guh_plantcare.osd-merkur.eep:a
-
-.PHONY:  flash-server avr-size-server
+.PHONY: flash-server avr-size-server
